--- a/src/style.scss
+++ b/src/style.scss
@@ -7,7 +7,11 @@
     width: 75%;
     margin: 0 auto;
 }
-
+@media screen and (min-width: 48em) {
+    .site-content {
+        padding: 2.5em 0 0;
+    }
+}
 footer#colophon {
     background-color: #fff;
 }
@@ -16,7 +20,7 @@ footer#colophon {
 .twentyseventeen-front-page.has-header-video .custom-header-media,
 .home.blog.has-header-image .custom-header-media,
 .home.blog.has-header-video .custom-header-media {
-	height: 40vh !important;
+	height: 25vh !important;
 }
 
 #page {
