Aseel as a non-child theme

--- a/src/style.scss
+++ b/src/style.scss
@@ -16,8 +16,8 @@ footer#colophon {
     background-color: #fff;
 }
 
-.twentyseventeen-front-page.has-header-image .custom-header-media,
-.twentyseventeen-front-page.has-header-video .custom-header-media,
+.aseel-front-page.has-header-image .custom-header-media,
+.aseel-front-page.has-header-video .custom-header-media,
 .home.blog.has-header-image .custom-header-media,
 .home.blog.has-header-video .custom-header-media {
 	height: 25vh !important;
